# gambal

./: .clang-format  .clang-tidy  .travis.yml  CMakeLists.txt  Makefile  README.md  ashmon.c  ashmon.h  autostart.sh  install.sh  nic.c  nic.h  window.c  window.h
assets/: ashmon.desktop  gambal.desktop
debian/: changelog  control
rpm/: gambal.spec
src/: ashmon.c  ashmon.cpp  ashmon.h  config.hpp  gambal.cpp  gui.hpp  histogram.hpp  nic.c  nic.h  nic_mgr.hpp  proc.hpp  ring_buffer.hpp  window.c  window.h
src/icons/: close.xbm  left-arrow.xbm  plus-minus.xbm  restart.xbm  right-arrow.xbm  sigma.xbm
tools/: run-clang-format.sh  run-clang-tidy.sh
